Quests now lock and unlock properly depending on the quest requirements.